update storeRooutes
